--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/bifot/json-rpc#readme",
   "dependencies": {
     "axios": "^0.19.0",
-    "co-body": "^6.0.0"
+    "co-body": "^6.0.0",
+    "http-assert": "^1.4.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
