--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bifot/json-rpc",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Solution for communication between services using HTTP protocol via JSON RPC. 🔬",
   "main": "src/index.js",
   "scripts": {
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/bifot/json-rpc#readme",
   "dependencies": {
     "axios": "^0.19.0",
-    "co-body": "^6.0.0"
+    "co-body": "^6.0.0",
+    "http-assert": "^1.4.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
