--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/bifot/json-rpc#readme",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.18.0",
+    "axios-retry": "^3.1.2",
     "co-body": "^6.0.0",
     "http-assert": "^1.4.1"
   },
